cli/tests/testdata/node/test.out
[WILDCARD]
Warning: Not implemented: test.options.concurrency
Warning: Not implemented: test.options.concurrency
Warning: Not implemented: test.options.timeout
Warning: Not implemented: test.options.timeout
Warning: Not implemented: test.options.timeout
Warning: Not implemented: test.options.timeout
running 62 tests from ./node/test.js
sync pass todo ...
------- output -------
Warning: Not implemented: test.TestContext.todo
----- output end -----
sync pass todo ... ok [WILDCARD]
sync pass todo with message ...
------- output -------
Warning: Not implemented: test.TestContext.todo
----- output end -----
sync pass todo with message ... ok [WILDCARD]
sync fail todo ...
------- output -------
Warning: Not implemented: test.TestContext.todo
----- output end -----
sync fail todo ... FAILED [WILDCARD]
sync fail todo with message ...
------- output -------
Warning: Not implemented: test.TestContext.todo
----- output end -----
sync fail todo with message ... FAILED [WILDCARD]
sync skip pass ...
------- output -------
Warning: Not implemented: test.TestContext.skip
----- output end -----
sync skip pass ... ok [WILDCARD]
sync skip pass with message ...
------- output -------
Warning: Not implemented: test.TestContext.skip
----- output end -----
sync skip pass with message ... ok [WILDCARD]
sync pass ...
------- output -------
DIAGNOSTIC: this test should pass
----- output end -----
sync pass ... ok [WILDCARD]
sync throw fail ... FAILED [WILDCARD]
async skip pass ...
------- output -------
Warning: Not implemented: test.TestContext.skip
----- output end -----
async skip pass ... ok [WILDCARD]
async pass ... ok [WILDCARD]
async throw fail ... FAILED [WILDCARD]
async skip fail ...
------- output -------
Warning: Not implemented: test.TestContext.skip
----- output end -----
async skip fail ... FAILED [WILDCARD]
async assertion fail ... FAILED [WILDCARD]
resolve pass ... ok [WILDCARD]
reject fail ... FAILED [WILDCARD]
unhandled rejection - passes but warns ...
Uncaught error from ./node/test.js FAILED
unhandled rejection - passes but warns ... cancelled (0ms)
async unhandled rejection - passes but warns ... cancelled (0ms)
immediate throw - passes but warns ... cancelled (0ms)
immediate reject - passes but warns ... cancelled (0ms)
immediate resolve pass ... cancelled (0ms)
subtest sync throw fail ... cancelled (0ms)
sync throw non-error fail ... cancelled (0ms)
level 0a ... cancelled (0ms)
top level ... cancelled (0ms)
invalid subtest - pass but subtest fails ... cancelled (0ms)
sync skip option ... ignored (0ms)
sync skip option with message ... cancelled (0ms)
sync skip option is false fail ... cancelled (0ms)
noop ... cancelled (0ms)
functionOnly ... cancelled (0ms)
<anonymous> ... cancelled (0ms)
test with only a name provided ... cancelled (0ms)
noop ... cancelled (0ms)
noop ... ignored (0ms)
test with a name and options provided ... ignored (0ms)
functionAndOptions ... ignored (0ms)
escaped skip message ... cancelled (0ms)
escaped todo message ... cancelled (0ms)
escaped diagnostic ... cancelled (0ms)
callback pass ... cancelled (0ms)
callback fail ... cancelled (0ms)
sync t is this in test ... cancelled (0ms)
async t is this in test ... cancelled (0ms)
callback t is this in test ... cancelled (0ms)
callback also returns a Promise ... cancelled (0ms)
callback throw ... cancelled (0ms)
callback called twice ... cancelled (0ms)
callback called twice in different ticks ... cancelled (0ms)
callback called twice in future tick ... cancelled (0ms)
callback async throw ... cancelled (0ms)
callback async throw after done ... cancelled (0ms)
custom inspect symbol fail ... cancelled (0ms)
custom inspect symbol that throws fail ... cancelled (0ms)
subtest sync throw fails ... cancelled (0ms)
timed out async test ... cancelled (0ms)
timed out callback test ... cancelled (0ms)
large timeout async test is ok ... cancelled (0ms)
large timeout callback test is ok ... cancelled (0ms)
successful thenable ... cancelled (0ms)
rejected thenable ... cancelled (0ms)
unfinished test with uncaughtException ... cancelled (0ms)
unfinished test with unhandledRejection ... cancelled (0ms)

 ERRORS 

sync fail todo => node:test:135:10
error: Error: thrown from sync fail todo
  throw new Error("thrown from sync fail todo");
[WILDCARD]

sync fail todo with message => node:test:135:10
error: Error: thrown from sync fail todo with message
  throw new Error("thrown from sync fail todo with message");
[WILDCARD]

sync throw fail => node:test:135:10
error: Error: thrown from sync throw fail
  throw new Error("thrown from sync throw fail");
[WILDCARD]

async throw fail => node:test:135:10
error: Error: thrown from async throw fail
  throw new Error("thrown from async throw fail");
[WILDCARD]

async skip fail => node:test:135:10
error: Error: thrown from async throw fail
  throw new Error("thrown from async throw fail");
[WILDCARD]

async assertion fail => node:test:135:10
error: AssertionError: Values are not strictly equal:


    [Diff] Actual / Expected


-   true
+   false

    at [WILDCARD]

reject fail => node:test:135:10
error: Error: rejected from reject fail
  return Promise.reject(new Error("rejected from reject fail"));
                        ^
    at [WILDCARD]

./node/test.js (uncaught error)
error: Error: rejected from unhandled rejection fail
  Promise.reject(new Error("rejected from unhandled rejection fail"));
                 ^
    at [WILDCARD]
This error was not caught from a test and caused the test runner to fail on the referenced module.
It most likely originated from a dangling promise, event/timeout handler or top-level code.

 FAILURES 

sync fail todo => node:test:135:10
sync fail todo with message => node:test:135:10
sync throw fail => node:test:135:10
async throw fail => node:test:135:10
async skip fail => node:test:135:10
async assertion fail => node:test:135:10
reject fail => node:test:135:10
./node/test.js (uncaught error)

FAILED | 8 passed | 51 failed | 4 ignored [WILDCARD]

error: Test failed
